# factura_electronica_gt

./: .editorconfig  .gitignore  .prettierrc  LICENSE  MANIFEST.in  README.md  license.txt  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml
docs/: 404.html  index.html
docs/configuraciones/: clientes_proveedores.html  compania.html  impuestos.html  index.html  productos.html  series.html
docs/configurar_app/: README.md  configurar_credenciales.html  configurar_credenciales.md  index.html
docs/contribuir/: index.html
docs/generacion_docs_electronicos/: anulacion_documentos.html  factura_cambiaria.html  factura_electronica.html  factura_especial.html  nota_credito.html  nota_debito.html
docs/introduccion/: actualizar.html  desinstalar.html  disclaimer.html  disclaimer.md  instalar.html
facelec_docs/: .gitignore  package-lock.json  package.json
facelec_docs/docs/: README.md
factura_electronica/: ._api.py  ._guardar_factura.py  ._hooks.py  ._special_tax.py  Untitled-4.py  __init__.py  api.py  api_erp.py  api_erp_ecosystem.py  batch_api.py  crear_xml.py  fel_api.py  fixtures.py  guardar_factura.py  hooks.py  modules.txt  new_api.py  obtener_cae.py  old_ok_api.py  patches.txt  request_xml.py  special_invoice.py  special_tax.py  special_tax_pi.py  valida_errores.py
factura_electronica/config/: desktop.py  docs.py  factura_electronica.py
factura_electronica/controllers/: gl_entry.py  journal_entry.py  journal_entry_special.py
factura_electronica/fel/: canceller.py  credit_note.py  debit_note.py  document_reverser.py  (+7 more)
(+336 files in other folders)
